test/fail/interpolation/interp_comment.lly
#[
SyntaxError: Comment within interpolated section.
    from interp_comment.lly:6
]#

var v = $"^(#)"
